src/main/kotlin/com/example/server/error/exception/UserNotFoundException.kt
package com.example.server.error.exception

class UserNotFoundException(val obj: Any) : RuntimeException()